[gd_scene load_steps=2 format=1]

[ext_resource path="res://Scripts/MainScene.gd" type="Script" id=1]

[node name="MainScene" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="MainVBox" type="VBoxContainer" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 5.0
margin/top = 5.0
margin/right = 5.0
margin/bottom = 5.0
alignment = 0

[node name="TitleContainer" type="HBoxContainer" parent="MainVBox"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 290.0
margin/bottom = 14.0
alignment = 0

[node name="TitleLabel" type="Label" parent="MainVBox/TitleContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 125.0
margin/bottom = 14.0
text = "Trigonometry Baker"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HSeparator" type="HSeparator" parent="MainVBox"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 18.0
margin/right = 290.0
margin/bottom = 21.0

[node name="OptionsContainer" type="VBoxContainer" parent="MainVBox"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 25.0
margin/right = 290.0
margin/bottom = 359.0
alignment = 0

[node name="StepContainer" type="HBoxContainer" parent="MainVBox/OptionsContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 290.0
margin/bottom = 24.0
alignment = 0

[node name="StepLabel" type="Label" parent="MainVBox/OptionsContainer/StepContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 0.0
margin/top = 5.0
margin/right = 212.0
margin/bottom = 19.0
text = "Step"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="StepSpinbox" type="SpinBox" parent="MainVBox/OptionsContainer/StepContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 216.0
margin/top = 0.0
margin/right = 290.0
margin/bottom = 24.0
range/min = -5000.0
range/max = 5000.0
range/step = 0.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
editable = true
prefix = ""
suffix = ""

[node name="StartValueContainer" type="HBoxContainer" parent="MainVBox/OptionsContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 28.0
margin/right = 290.0
margin/bottom = 52.0
alignment = 0

[node name="StartValueLabel" type="Label" parent="MainVBox/OptionsContainer/StartValueContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 0.0
margin/top = 5.0
margin/right = 212.0
margin/bottom = 19.0
text = "Start value"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="StartValueSpinbox" type="SpinBox" parent="MainVBox/OptionsContainer/StartValueContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 216.0
margin/top = 0.0
margin/right = 290.0
margin/bottom = 24.0
range/min = -5000.0
range/max = 5000.0
range/step = 0.0
range/page = 0.0
range/value = 0.0
range/exp_edit = true
range/rounded = false
editable = true
prefix = ""
suffix = ""

[node name="EndValueContainer" type="HBoxContainer" parent="MainVBox/OptionsContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 56.0
margin/right = 290.0
margin/bottom = 80.0
alignment = 0

[node name="EndValueLabel" type="Label" parent="MainVBox/OptionsContainer/EndValueContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 0.0
margin/top = 5.0
margin/right = 212.0
margin/bottom = 19.0
text = "End Value"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="EndValueSpinbox" type="SpinBox" parent="MainVBox/OptionsContainer/EndValueContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 216.0
margin/top = 0.0
margin/right = 290.0
margin/bottom = 24.0
range/min = -5000.0
range/max = 5000.0
range/step = 0.0
range/page = 0.0
range/value = 0.0
range/exp_edit = true
range/rounded = false
editable = true
prefix = ""
suffix = ""

[node name="OutputFormatContainer" type="HBoxContainer" parent="MainVBox/OptionsContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 84.0
margin/right = 290.0
margin/bottom = 108.0
alignment = 0

[node name="OutputFormatLabel" type="Label" parent="MainVBox/OptionsContainer/OutputFormatContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 0.0
margin/top = 5.0
margin/right = 143.0
margin/bottom = 19.0
text = "Output Format"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="OutputFormatInput" type="LineEdit" parent="MainVBox/OptionsContainer/OutputFormatContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 147.0
margin/top = 0.0
margin/right = 290.0
margin/bottom = 24.0
text = "{%s: %s},"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="TargetFileContainer" type="HBoxContainer" parent="MainVBox/OptionsContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 112.0
margin/right = 290.0
margin/bottom = 136.0
alignment = 0

[node name="TargetLabel" type="Label" parent="MainVBox/OptionsContainer/TargetFileContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 0.0
margin/top = 5.0
margin/right = 111.0
margin/bottom = 19.0
text = "Target file"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TargetInput" type="LineEdit" parent="MainVBox/OptionsContainer/TargetFileContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 115.0
margin/top = 0.0
margin/right = 226.0
margin/bottom = 24.0
placeholder/text = "user://output.txt"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="TargetBrowse" type="Button" parent="MainVBox/OptionsContainer/TargetFileContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 230.0
margin/top = 0.0
margin/right = 289.0
margin/bottom = 24.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Browse"
flat = false

[node name="FunctionContainer" type="HBoxContainer" parent="MainVBox/OptionsContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 140.0
margin/right = 290.0
margin/bottom = 160.0
alignment = 0

[node name="FunctionLabel" type="Label" parent="MainVBox/OptionsContainer/FunctionContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 0.0
margin/top = 3.0
margin/right = 225.0
margin/bottom = 17.0
text = "Function"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="FunctionOption" type="OptionButton" parent="MainVBox/OptionsContainer/FunctionContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 229.0
margin/top = 0.0
margin/right = 290.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "cos"
flat = false
align = 0
selected = 0
items = [ "cos", null, false, 0, null, "acos", null, false, 1, null, "cosh", null, false, 2, null, "sin", null, false, 3, null, "asin", null, false, 4, null, "sinh", null, false, 5, null, "tan", null, false, 6, null, "atan", null, false, 7, null, "tanh", null, false, 8, null ]

[node name="HSeparator1" type="HSeparator" parent="MainVBox"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 363.0
margin/right = 290.0
margin/bottom = 366.0

[node name="StatusContainer" type="HBoxContainer" parent="MainVBox"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 370.0
margin/right = 290.0
margin/bottom = 390.0
alignment = 0

[node name="StatusProgress" type="ProgressBar" parent="MainVBox/StatusContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 0.0
margin/top = 2.0
margin/right = 223.0
margin/bottom = 18.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
percent/visible = true

[node name="StatusStart" type="Button" parent="MainVBox/StatusContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 227.0
margin/top = 0.0
margin/right = 290.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Commit"
flat = false

[node name="FileDialog" type="FileDialog" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 17.0
margin/top = 48.0
margin/right = 278.0
margin/bottom = 362.0
popup/exclusive = false
window/title = "Open a File"
dialog/hide_on_ok = true
mode = 0
access = 2
filters = StringArray(  )
show_hidden_files = false

[connection signal="pressed" from="MainVBox/OptionsContainer/TargetFileContainer/TargetBrowse" to="." method="_on_TargetBrowse_pressed"]

[connection signal="pressed" from="MainVBox/StatusContainer/StatusStart" to="." method="_on_StatusStart_pressed"]

[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]


